--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-native-websocket-vue3": "^3.1.4",
     "vue-router": "^4.0.3",
-    "vue-yandex-maps": "^0.12.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
